# notes

./: .gitignore
marimo_note/: pyproject.toml
project_templates/: ReadMe.md
project_templates/django_template/: pyproject.toml
project_templates/litestar_template/: main.py
project_templates/ssh_command_template/: main.py  pyproject.toml
python/: note_start.py  pgsql_study.py  pyproject.toml  sample-file.json
python/project_templates/litestar_template/: README.md  pyproject.toml
python/project_templates/litestar_template/models/: __init__.py
